Added more config options, reduced default resolution

--- a/config.ini.example
+++ b/config.ini.example
@@ -2,6 +2,7 @@
 FETCH_INTERVAL = 10
 MIL_PREFIX_LIST = 7CF
 TAR1090_URL = http://localhost/data/aircraft.json
+BLINK_MILITARY = true
 
 [Location]
 LAT = -31.9522
@@ -10,7 +11,12 @@ AREA_NAME = PERTH
 RADIUS_NM = 60
 
 [Display]
-SCREEN_WIDTH = 1920
-SCREEN_HEIGHT = 1080
+SCREEN_WIDTH = 960
+SCREEN_HEIGHT = 540
 FPS = 6
+MAX_TABLE_ROWS = 10
 FONT_PATH = fonts/TerminusTTF-4.49.3.ttf
+HEADER_FONT_SIZE = 32
+RADAR_FONT_SIZE = 22
+TABLE_FONT_SIZE = 22
+INSTRUCTION_FONT_SIZE = 12
