Added text cache for performance

--- a/config.ini.example
+++ b/config.ini.example
@@ -10,10 +10,13 @@ LON = 115.8614
 AREA_NAME = PERTH
 RADIUS_NM = 60
 
+[Performance]
+STATIC_REDRAW_INTERVAL = 5
+FPS = 6
+
 [Display]
 SCREEN_WIDTH = 960
 SCREEN_HEIGHT = 540
-FPS = 6
 MAX_TABLE_ROWS = 10
 FONT_PATH = fonts/TerminusTTF-4.49.3.ttf
 HEADER_FONT_SIZE = 32
