--- a/config.ini.example
+++ b/config.ini.example
@@ -13,6 +13,13 @@ RADIUS_NM = 60
 [Performance]
 STATIC_REDRAW_INTERVAL = 5
 FPS = 6
+ENABLE_TEXT_CACHE = true
+ENABLE_COORDINATE_CACHE = true
+ENABLE_STATIC_SURFACE_CACHE = true
+MAX_TEXT_CACHE_SIZE = 1000
+COORDINATE_CACHE_TTL = 1.0
+USE_NUMPY_BATCH_OPS = true
+DIRTY_RECT_RENDERING = false
 
 [Display]
 SCREEN_WIDTH = 960
@@ -23,3 +30,8 @@ HEADER_FONT_SIZE = 32
 RADAR_FONT_SIZE = 22
 TABLE_FONT_SIZE = 22
 INSTRUCTION_FONT_SIZE = 12
+
+[Memory]
+MAX_AIRCRAFT_SPRITES = 50
+SURFACE_CACHE_SIZE_MB = 16
+AUTO_CLEANUP_INTERVAL = 300
