--- a/config.ini.example
+++ b/config.ini.example
@@ -16,6 +16,7 @@ SCREEN_HEIGHT = 540
 FPS = 6
 MAX_TABLE_ROWS = 10
 FONT_PATH = fonts/TerminusTTF-4.49.3.ttf
+BACKGROUND_PATH =
 HEADER_FONT_SIZE = 32
 RADAR_FONT_SIZE = 22
 TABLE_FONT_SIZE = 22
